<resources>
    <string name="app_name">BodyArchitect</string>
    <string name="html_app_name"><b>Body</b><i>Architect</i></string>
    <string name="main_activity_menu_settings">Settings</string>
	<string name="main_activity_menu_logout">Logout</string>
	<string name="login_activity_menu_create_account">Create a free account</string>
	<string name="login_activity_menu_forgot_password">Forgot password</string>
    <string name="company_logo_created_by">created by</string>
	<string name="login_activity_lbl_username">username</string>
	<string name="login_activity_lbl_password">password</string>
	<string name="login_activity_btn_login">Login</string>
	<string name="calendar_view_err_retrieve_entries">Cannot retrieve entries</string>
	<string name="calendar_view_progress_logging">Logging...</string>
	<string name="progress_retrieving_entries">Retrieving entries...</string>
	<string name="err_login_failed">Username or password is wrong</string>
	<string name="err_login_unhandled">Cannot login. Please try later</string>
	<string name="progress_retrieving_profile_info">Retrieving profile information...</string>
	<string name="err_retrieving_profile_info">Cannot retrieve profile information</string>
	<string name="err_network_problem">You don\'t have an Internet access</string>
	<string name="err_offline_mode">This operation is unavailable in Offline mode.</string>
    <string name="info_feature_offline_mode">This feature is not available in Offline mode.</string>
	<string name="err_licence">This option is not available in your account.</string>
	<string name="err_olddata">The current entry has been already changed. You must refresh your data and try again.</string>
    <string name="training_day_selector_control_needs_sync">Needs synchronization</string>
	<string name="strength_training_activity_header_exercises">exercises</string>
	<string name="strength_training_activity_header_info">info</string>
	<string name="strength_training_activity_header_preview">preview</string>
	<string name="strength_training_exercises_adapter_lbl_sets_count">Sets: %s</string>
    <string name="duration_title">Duration</string>
	<string name="settings_language">Language</string>
	<string name="settings_language_change_info">You must restart the application to apply new language.</string>
	<string name="settings_language_default">Default</string>
	<string name="cardio_set_header">Cardio session</string>
	<string name="timer_start">Start</string>
	<string name="timer_stop">Stop</string>
	<string name="cardio_set_timer_description">Hit the start button to begin your cardio session. Press stop when you\'re done and the total session time will be recorded. You can also set this time manually.</string>
	<string name="set_details_header">details</string>
	<string name="cardio_distance">distance</string>
	<string name="cardio_burned_calories">burned</string>
	<string name="comment">comment</string>
	<string name="comment_watermark">Enter some comment here</string>
	<string name="cardio_set_empty_list">No cardio sessions yet</string>
	<string name="exercise_view_label_force">force</string>
	<string name="exercise_view_label_mechanic">mechanic</string>
	<string name="exercise_view_label_difficult">difficult</string>
	<string name="exercise_view_label_exercise_type">exercise type</string>
	<string name="exercise_view_label_url">go to page</string>
	<string name="supplements_activity_header_supplements">supplements</string>
	<string name="supplements_activity_header_info">info</string>
	<string name="strength_training_activity_new_records">You have new records</string>
	<string name="err_save_training_day">Saved in local cache only.</string>
	<string name="strength_training_activity_incorrect_sets">Program has detected some sets with probably incorrect values. Press OK to save them or Cancel to skip.\n\nIncorrect sets:</string>
    <string name="not_set">Not set</string>
    <string name="measurements_activity_header_size">measurements</string>
    <string name="measurements_activity_header_info">measurements</string>
	<string name="create_profile_terms_of_service">By clicking Create button you accept <a href="http://service.bodyarchitectonline.com/TermsOfUse.htm">Terms of Service</a> and <a href="http://service.bodyarchitectonline.com/PrivacyPolicy.htm">Privacy Policy</a></string>
	<string name="create_profile_username_available">Username is available</string>
	<string name="create_profile_username_unavailable">Username is unavailable</string>
    <string name="create_profile_err_empty_values">You must fill all required data</string>
    <string name="create_profile_err_wrong_passwords">Passwords are different.</string>
    <string name="err_unhandled">Cannot finish the current operation. Please try later.</string>
    <string name="forgot_password_success">Email with new password has been sent.</string>
    <string name="change_account_type_progress">Changing account type...</string>
	<string name="gps_tracker_activity_header_workout">workout</string>
	<string name="gps_tracker_activity_header_info">info</string>
	<string name="gps_tracker_activity_header_summary">summary</string>
    <string name="create_profile_welcome">Welcome to</string>
    <string name="create_profile_email">email</string>
    <string name="create_profile_birthday">birthday</string>
    <string name="create_profile_male">male</string>
    <string name="create_profile_female">female</string>
    <string name="create_profile_country">country</string>
    <string name="create_profile_measurements">measurements</string>
    <string name="create_profile_metric">metric</string>
    <string name="create_profile_imperial">imperial</string>
    <string name="create_profile_header_password">password</string>
    <string name="create_profile_password">password</string>
    <string name="create_profile_password_confirm">confirm</string>
    <string name="create_profile_btn_create">create</string>
    <string name="create_profile_header_profile">profile info</string>
    <string name="create_profile_empty_birthday">(select birthday)</string>
    <string name="create_profile_empty_country">(select a country)</string>
    <string name="create_profile_unexpected_exception">Cannot create a profile</string>
    <string name="create_profile_unique_exception">Username or email is already used</string>
	<string name="forgot_password_username">Username or email</string>
	<string name="forgot_password_description">Enter your username or email address and press Ok button. New password will be sent on your email.</string>
	<string name="button_send">Send</string>
	<string name="forgot_password_title">FORGOT PASSWORD</string>
	<string name="main_menu_bodyinstructor">BODYINSTRUCTOR</string>
	<string name="main_menu_workoutplans">WORKOUT PLANS</string>
	<string name="main_menu_people">PEOPLE</string>
	<string name="profile_edit_activity_gender">gender</string>
    <string name="fragment_upgrade_show_instructor_account">Show Instructor account</string>
    <string name="fragment_upgrade_show_premium_account">Show Premium account</string>
    <string name="button_close">close</string>
    <string name="fragment_upgrade_button_change">change...</string>
    <string name="profile_info_general_fragment_account_created_date">account created</string>
    <string name="profile_info_general_fragment_awards">awards</string>
    <string name="profile_info_general_fragment_button_show_statistics">show statistics</string>
    <string name="profile_info_general_fragment_button_show_calendar">show calendar</string>
    <string name="profile_info_general_fragment_button_add_to_favorites">add to favorites</string>
    <string name="profile_info_general_fragment_button_remove_from_favorites">remove from favorites</string>
    <string name="profile_info_general_fragment_button_send_invitation">propose a friendship</string>
    <string name="profile_info_general_fragment_button_reject_invitation">reject a friendship</string>
    <string name="profile_info_general_fragment_button_send_message">send a message</string>
    <string name="settings_general_fragment_header_service">service</string>
    <string name="settings_general_fragment_language">language</string>
    <string name="settings_general_fragment_language_description">Allows to change the applicaion language. Default means, that language will be taken from the system.</string>
    <string name="settings_general_fragment_retrieve_months">retrieve months</string>
    <string name="settings_general_fragment_retrieve_months_description">The number of months from which the calendar entries will be downloaded from the server. The program will automatically download entries from the current and previous month.</string>
    <string name="settings_general_fragment_header_cardio_tracker">cardio tracker</string>
    <string name="settings_general_fragment_auto_pause">auto pause</string>
    <string name="settings_general_fragment_auto_pause_description">If enabled, <b>Body</b><i>Architect</i> will detect if you haven’t moved for 5 seconds and will pause your workout. Once you move again the workout will be resumed.</string>
    <string name="settings_strength_training_fragment_header_strength_training">strength training</string>
    <string name="settings_strength_training_fragment_sort_exercises">sort exercises by</string>
    <string name="settings_strength_training_fragment_sort_exercises_description">Determines if whole exercise name or a shortcut is to be displayed in strength workout and when browsing workout plans.</string>
    <string name="settings_strength_training_fragment_copy_data">copy sets data to new entry</string>
    <string name="settings_strength_training_fragment_copy_data_description">Defines the way how strength training entry will be copied or how workout plan will be used in our calendar.</string>
	<string name="settings_strength_training_fragment_copy_new_sets">copy values for new set</string>
	<string name="settings_strength_training_fragment_copy_new_sets_description">Turn on if you want the number of repeats and weight to be copied when you add the next set.</string>
	<string name="settings_strength_training_fragment_superset_as_one">treat superset as one</string>
	<string name="settings_strength_training_fragment_superset_as_one_description">When selected, then for each superset (in strength training), if you add a new set to the one of joined exercises, then new sets will be added to rest of the exercises automatically. The same happen for delete set and for the timer (measured time will be added to all sets in the group)</string>
	<string name="settings_strength_training_fragment_start_global_timer">start timer automatically</string>
	<string name="settings_strength_training_fragment_start_global_timer_description">Select, if you want to start timer automatically when you add a new strength training to your calendar. Available in <b>Premium</b> account only</string>
	<string name="settings_misc_fragment_header_cache">cache</string>
	<string name="settings_misc_fragment_button_clear_cache">Clear cache</string>
	<string name="settings_misc_fragment_button_clear_cache_description">Removes all photos, tips and tricks, exercises, supplements, workout plans and training days from the cache. After this application will retrieve those data when it is needed.</string>
	<string name="main_menu_tips_tricks">TIPS &amp; TRICKS</string>
	<string name="main_menu_more_features">MORE</string>
    <string name="settings_misc_fragment_header_screen">screen</string>
    <string name="settings_misc_fragmen_screen_orientation_lock">lock orientation</string>
    <string name="settings_misc_fragmen_screen_orientation_lock_description">Turn this on if you don\'t want to your screen changing orientation in <b>Body</b><i>Architect</i>. Which means that with this option application will use <b>portrait</b> mode only.</string>
    <string name="main_menu_about">ABOUT</string>
</resources>