<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
			android:layout_height="match_parent">
	<LinearLayout android:orientation="vertical"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent">
        <TextView android:text="@string/settings_misc_fragment_header_screen" style="@style/HeaderStyle"/>
        <android.support.v7.widget.SwitchCompat android:layout_marginTop="@dimen/margin_between_controls" android:text="@string/settings_misc_fragmen_screen_orientation_lock" android:id="@+id/tbScreenLock"  android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:text="@string/settings_misc_fragmen_screen_orientation_lock_description" android:textColor="@color/subtle" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>


		<TextView android:text="@string/settings_misc_fragment_header_cache" android:layout_marginTop="@dimen/margin_between_headers" style="@style/HeaderStyle"/>

		<Button android:layout_marginTop="@dimen/margin_between_controls" android:id="@+id/btnClearCache" android:text="@string/settings_misc_fragment_button_clear_cache" android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

		<TextView android:text="@string/settings_misc_fragment_button_clear_cache_description" android:textColor="@color/subtle" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>

	</LinearLayout>
</ScrollView>