<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView android:text="@string/settings_general_fragment_header_service" style="@style/HeaderStyle"/>

        <TextView style="@style/SmallLabel" android:layout_marginTop="@dimen/margin_between_controls" android:layout_marginLeft="@dimen/margin_label_to_control" android:text="@string/settings_general_fragment_language" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>
        <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/cmbLanguage"/>
        <TextView android:layout_marginLeft="@dimen/margin_label_to_control" android:text="@string/settings_general_fragment_language_description" android:textColor="@color/subtle" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>

        <TextView style="@style/SmallLabel" android:layout_marginTop="@dimen/margin_between_headers" android:layout_marginLeft="@dimen/margin_label_to_control" android:text="@string/settings_general_fragment_retrieve_months" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>
        <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/cmbRetrieveMonths"/>
        <TextView android:layout_marginLeft="@dimen/margin_label_to_control" android:text="@string/settings_general_fragment_retrieve_months_description" android:textColor="@color/subtle" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>

        <TextView android:layout_marginTop="@dimen/margin_between_headers" android:text="@string/settings_general_fragment_header_cardio_tracker" style="@style/HeaderStyle"/>

        <android.support.v7.widget.SwitchCompat  android:layout_marginTop="@dimen/margin_between_controls" android:layout_marginLeft="@dimen/margin_label_to_control" android:text="@string/settings_general_fragment_auto_pause" android:id="@+id/twAutoPause"  android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_marginLeft="@dimen/margin_label_to_control" android:text="@string/settings_general_fragment_auto_pause_description" android:textColor="@color/subtle" android:layout_width="wrap_content"  android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
