<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
                    android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" android:paddingRight="@dimen/margin_screen"
                  android:paddingLeft="@dimen/margin_screen" android:paddingBottom="@dimen/margin_screen">
		<LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
			<com.quasardevelopment.bodyarchitect.client.ui.controls.BAPicture android:id="@+id/imgUser" android:layout_width="100dip" android:layout_height="100dip"/>
			<TextView  android:id="@+id/tbStatus" android:textStyle="italic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>
		</LinearLayout>


        <TextView  android:text="@string/login_activity_lbl_username" android:textSize="@dimen/large_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>
        <TextView  android:id="@+id/tbUsername" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>

        <TextView  android:text="@string/profile_edit_activity_gender" android:textSize="@dimen/large_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>
        <TextView  android:id="@+id/tbGender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>

        <TextView  android:text="@string/create_profile_country" android:textSize="@dimen/large_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>
        <TextView  android:id="@+id/tbCountry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>

        <TextView  android:text="@string/profile_info_general_fragment_account_created_date" android:textSize="@dimen/large_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>
        <TextView  android:id="@+id/tbDateTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>

        <TextView android:id="@+id/tbAwards" android:text="@string/profile_info_general_fragment_awards" android:textSize="@dimen/large_font" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/subtle"/>
        <com.quasardevelopment.bodyarchitect.client.ui.controls.AwardsControl android:id="@+id/ctrlAwards" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <Button android:id="@+id/btnStatistics" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_show_statistics" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>

        <Button android:id="@+id/btnShowCalendar" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_show_calendar" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>
        <TextView  android:id="@+id/tbLastEntryDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/accent_color"
                   android:layout_marginTop="-8dp"/>

        <Button android:id="@+id/btnAddToFavorites" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_add_to_favorites" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>
        <Button android:id="@+id/btnRemoveFromFavorites" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_remove_from_favorites" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>

        <Button android:id="@+id/btnSendInvitation" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_send_invitation" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>
        <Button android:id="@+id/btnRejectFriendship" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_reject_invitation" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>

        <Button android:id="@+id/btnSendMessage" style="@style/LinkButton" android:text="@string/profile_info_general_fragment_button_send_message" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/large_font"/>
    </LinearLayout>
</ScrollView>
